--- a/css files/style.css
+++ b/css files/style.css
@@ -1,38 +1,74 @@
+
+
+
 #home{
   background-color:lavender;
 
  }
-   
+.navbar{
+background-color:#003c66;
+opacity:90%;
+
+}
  
  li a {
  color:white;
+ font-family:sans-serif;
+ font-style: bold;
+ 
  
   
 }
 li a:hover {
+  color:lavender;
+  border-bottom: 3px solid #ffa343;
 
-  
-  color:orange;
+}
+.navbar-brand{
+   color: white;
+ text-shadow: 0px -2px 0px #333,
+     0px 2px 3px #666;
+  font-family: Helvetica, Arial, sans-serif;
 
 }
 
+.modal-body{
+  border:none;
+}
 
-	 
+.centered {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:white;
+  font-size: 40px;
+  font-family: sans-serif;
+    text-shadow: 2px 2px black;
+
+}
+
+.centered:hover strong {
+color:lavenderblush;
+
+}
+.d-flex{
+    background-color: lavender;
+  } 
   #tag{
-    position: relative;
+    
+    padding:auto;
    
     background-color:white;
     
-    margin-top: -50px;
+    margin-top: -60px;
      box-shadow: 0 3px #999;
     
 
 }
 
-.d-flex{
-display: flex;
 
-}
 
 .card:hover{
      transform: scale(1.05);
@@ -50,31 +86,103 @@ display: flex;
 }
 #section1{
   padding-top: 70px;
+  padding-bottom: 40px;
+  background-color: lavender;
   
 }
+
 .col-md-7 h1{
   padding-left: 80px;
-  color: #0000ff;
+  color:#1F305E;
   font-family:sans-serif;
   padding-top:30px; 
- 
+ padding-bottom: 20px;
 }
 #button{
-  background-color:#FF8C00;
+  background-color: #ED9121;
   color: white;
-  margin-left: 230px;
+  
   margin-bottom: 30px;
-  margin-top: 20px;
+  margin-top: 10px;
   border-radius: 5px;
   
    box-shadow: 0 9px #999;
 
 }
-iframe{
-  padding-top: 40px;
+#button1{
+  background-color: #ED9121;
+  color: white;
+  
+  margin-bottom: 30px;
+  margin-top: 10px;
+  border-radius: 5px;
+  
+   box-shadow: 0 9px #999;
+
 }
-h2,i{
-  padding-left:10px;
-   color: #FF8C00; 
-  font-family:sans-serif;
+
+.container{
+  padding-top: 30px;
+}
+.navbar-fixed-top.scrolled {
+  background-color: #fff;
+  transition: background-color 200ms linear;
+}
+.navbar-fixed-top.scrolled .nav-link {
+  color:#555;
+}
+
+@media (max-width:576px) {
+  html{
+    font-size: 80%;
+  }
+
+  .centered {
+    padding-top: 50px;
+  }
+  #tag{
+    margin-top:10px;;
+
+  }
+  #singleimg{
+    padding-left: 50px;;
+  }
+  #foot{
+    font-size: 11px;
+  }
+  #foot h2,p{
+    text-align: center;
+    padding-bottom: 3px;
+  }
+}
+footer{
+  
+  background-color:#003c66;;
+  opacity:90%;
+  color:white;
+  padding-top: 5px;
+}
+footer a{
+  color:white;
+  padding-bottom: 5px;
+}
+footer i{
+   padding-left: 15px;
+   padding-top:5px;
+  
+}
+
+
+.col-md-4 h2{
+  stroke: 1px;
+  text-shadow: 0px -2px 0px #333,
+     0px 2px 3px #666;
+
+  -webkit-text-stroke: 2px black;
+
+
+}
+.container hr{
+
+  border: 1px solid white;
 }
